# routes/employeeDetails.route.js
@@ -3,11 +3,15 @@ const usercontroler = require('../controller/employeeDetails.controller.js')
 
 const route = express.Router()
 
-route.get('/getAll', usercontroler.getAll)
+// route.get('/getAll', usercontroler.getAll)
 
 route.get('/getId/:id', usercontroler.getId)
 
 route.post('/create', usercontroler.create)
+
+// route.get('/getrole/:id',usercontroler.getrole)
+// route.get('/getAllrole',usercontroler.getAllrole)
+route.get('/getAllrole', usercontroler.getAllrole);
 
 route.put('/update/:id', usercontroler.update)
 
