# swagger-output.json
@@ -28,19 +28,6 @@
         }
       }
     },
-    "/EmployeeDetails/getAll": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
     "/EmployeeDetails/getId/{id}": {
       "get": {
         "description": "",
@@ -100,6 +87,22 @@
           },
           "400": {
             "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/EmployeeDetails/getAllrole": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
